--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# The .idea folder
+.idea
+
+# The output folder
+out
+
 # Compiled class file
 *.class
 
@@ -21,3 +27,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/Jump And Run.iml
